<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase12</string>

    <string name="btnLogueoTexto">Loguearse!!</string>
    <string name="btnVotacionTexto">Votar!!</string>
    <string name="btnResultadoTexto">Ver Resultado</string>
    
    
    <string name="txtUsuarioTexto">Ingrese un usuario</string>
    <string name="txtClaveTexto">Ingrese su clave</string>
    <string name="btnIngresoTexto">Ingresar</string>
    
    <string name="mensajeTexto">Conectando al API!!!</string>
    <string name="mensajeLogueo">Ingrese datos correctos</string>
    
    
    
    
    
    <string name="title_activity_logueo">LogueoActivity</string>
    <string name="title_activity_votacion">VotacionActivity</string>
    <string name="title_activity_resultado">ResultadoActivity</string>

</resources>
